# aperio

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  credentials.json  pyproject.toml
aperio/: __init__.py  client.py  models.py  utils.py
tests/: test_client.py  test_uds2.py  test_utils.py  utils.py
uds2/: api.py  bases.py  client.py  exceptions.py  files.py  utils.py
udsi/: __init__.py  api.py  client.py  exceptions.py  models.py  utils.py
udsi.egg-info/: PKG-INFO
