[tool.poetry]
name = "udsi"
version = "0.1.1"
description = "Unlimited Drive Storage Improved"
authors = ["elliott-maguire <me@elliott-m.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"
google-auth = "^1.6"
google-api-python-client = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
